add - normalize and one hot encode

--- a/image_classification.ipynb
+++ b/image_classification.ipynb
@@ -14,11 +14,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "CIFAR-10 Dataset: 171MB [00:43, 3.90MB/s]                              \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All files found!\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -79,11 +94,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Stats of batch 1:\n",
+      "Samples: 10000\n",
+      "Label Counts: {0: 1005, 1: 974, 2: 1032, 3: 1016, 4: 999, 5: 937, 6: 1030, 7: 1001, 8: 1025, 9: 981}\n",
+      "First 20 Labels: [6, 9, 9, 4, 1, 1, 2, 7, 8, 3, 4, 7, 7, 2, 9, 9, 9, 3, 2, 6]\n",
+      "\n",
+      "Example of Image 256:\n",
+      "Image - Min Value: 1 Max Value: 227\n",
+      "Image - Shape: (32, 32, 3)\n",
+      "Label - Label Id: 7 Name: horse\n"
+     ]
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAfoAAAH0CAYAAADVH+85AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAAWJQAAFiUBSVIk8AAAGuZJREFUeJzt3TmPpfl1H+D/fe+9VXVr7+qd3T09CzmYGQZDUqIE27AF\nZQacOHLgxP4Czv0hHCqUAydeQiWEF4AGBIuUbFOgieEs9Ixm6Z6Zrl6quvZbd3XAQE7PUbMbOHie\n/OC8991+941+veVy2QCAmrpXfQAAwO+OoAeAwgQ9ABQm6AGgMEEPAIUJegAoTNADQGGCHgAKE/QA\nUJigB4DCBD0AFCboAaAwQQ8AhQl6AChM0ANAYYIeAAoT9ABQ2OBVH8Dvyp/+2c+WmblFYqYb9DOr\nWtfF/2dlZlprrdfrvbS5rp87H70uviv7u/Ln8eXM/HYuc3+8vOu8TO5q6bHEMS5Tr4F28nQ/PLM4\n/Dq16/jRg9Tc2tZeeObOOz9M7Wob2+GRafY7cpmLpS7x9u715qldGclbsf3T33sz+cT8LV/0AFCY\noAeAwgQ9ABQm6AGgMEEPAIUJegAoTNADQGGCHgAKE/QAUJigB4DCBD0AFCboAaAwQQ8AhZVtr8s3\nZCUqhnrJWqJevG0puSnVhNZarlEu1wHYWuaiZX/Xyz3GbKNc9mq/JNnbPvlwpp7N5DE+evBVeObX\nP/l3qV2z/U9Tc6s7t8Iz7//xP0ntevuHfxCeWd+NH19rrV304015reWe6H76jRqXbbF8EXzRA0Bh\ngh4AChP0AFCYoAeAwgQ9ABQm6AGgMEEPAIUJegAoTNADQGGCHgAKE/QAUJigB4DCypbadMm/MMtE\n8UC2V6VLFMZkixGy5yNTrJL5Xa211uvH57p0YUxyLnXNcrty5/HlnY/0dU4fY3ym3/VTu16/ezc8\n88Ug97tm3Sw1Nx8fhWfOH3yY2vVoeRKeWbv5RmrX1XfiBTqttTYfxctw5ulOm1fYUJPgix4AChP0\nAFCYoAeAwgQ9ABQm6AGgMEEPAIUJegAoTNADQGGCHgAKE/QAUJigB4DCBD0AFCboAaCwsu112Za3\nzGB2V2Yu3Rj2Eo8xW+yU2ZX+Xek2v8xMriIr0yj3Mq9z9ndl748uc9GW89SuX/3Vfw/PPPr689Su\n17ZGqblp4vR/8/knuV0nz8IzD3/+89Su0Zu5hr0//mf/MjyzshFvvGutteUyXXv3SviiB4DCBD0A\nFCboAaAwQQ8AhQl6AChM0ANAYYIeAAoT9ABQmKAHgMIEPQAUJugBoDBBDwCF1S21SZa/ZNo9uq6f\nWpUpqOmSrSW9LvefLjP3Ms99615uscpLLd5JlMZkinB+O5eYSW1qrbfMPS/9fnzj2fP91K4HH8QL\nWaanh6ldZ/1cqc3K6lp45sHXB6ldTw6OwjPj3kpq15cPf5qae+PH/zA88977P07tms2m8aF009rf\nnS96AChM0ANAYYIeAAoT9ABQmKAHgMIEPQAUJugBoDBBDwCFCXoAKEzQA0Bhgh4AChP0AFCYoAeA\nwgq31+Xmcl1oycawxLJ0O1myUS4z91Ib1F5iC91vBzO7Xt6yl9tel9y1yLXXZbrQPv7kl6ldy+PH\n4Zn+PPf2eLAfb4ZrrbVZF587Opundq1uxq/1RW+c2nUx2EjNLRfx898lg6Lr5e7hV8UXPQAUJugB\noDBBDwCFCXoAKEzQA0Bhgh4AChP0AFCYoAeAwgQ9ABQm6AGgMEEPAIUJegAoTNADQGFl2+v62Vaz\nZbwBqZftvEs1ob3Mfr3cMSaL8lLNa73kf9V081piX/7cv8zzEbdMNuUNVnPHuP/Fx+GZX/zkz1K7\n2slBeGQ6maRW7Z9OU3M3vvdOeOYP3/97qV1vv/v98Mzzk5PUrqen56m51994KzyzXOTa/DLvuGUi\nW14UX/QAUJigB4DCBD0AFCboAaAwQQ8AhQl6AChM0ANAYYIeAAoT9ABQmKAHgMIEPQAUJugBoLDC\npTa5AoEuUySS/LvUdYmClGSRSHuJxTvZUpvMXPZ0ZM9jai55g2QKjLps6VHmOg/6qV3fPvhNau6n\n//HfhmfGDz5J7bq2Ei+aedYWqV3X7383NffP/9W/Ds+89t4PUru6/kp4ZjFPvoOTNVDzxE2cu2LJ\nEqjkrhfBFz0AFCboAaAwQQ8AhQl6AChM0ANAYYIeAAoT9ABQmKAHgMIEPQAUJugBoDBBDwCFCXoA\nKEzQA0BhZdvrumxXUKpBLdsYFp9Lt9elxxINasllmS60bFtb681yc4n/xr1e7jHL3R+5Pq7MrovD\np6ld//5P/k1q7vjj/xmeef/memrXauJm7Pq5Nr/br72emrv1Rrz17nJ6ntp1dvQsPLO1eT21a5B8\nXhJloOnm0cxbZ5l9Cb8AvugBoDBBDwCFCXoAKEzQA0Bhgh4AChP0AFCYoAeAwgQ9ABQm6AGgMEEP\nAIUJegAoTNADQGFlS20Gyb8wi2WiSCRboJMpjEmXuOROSKZDJ/vvMVOG0yXLaWbzXLnHMvHr1oa7\nuV29eXhmsZymdp0cPw/P/Jf/9B9Sux7+9c9Tcz+4vRGeGa3mnpdBomIpWzh14+aN1NxsdhmeefDp\nB6ldy0RX0vUf/FFqV5d8gywT78ZFsmcmERNt+eo6bXzRA0Blgh4AChP0AFCYoAeAwgQ9ABQm6AGg\nMEEPAIUJegAoTNADQGGCHgAKE/QAUJigB4DCBD0AFFa2va7f5aqClvHCsNb7O/S1hXclG5C6ZHtd\nplGun5hprbVFF2+im82OU7t646PU3GI6Cc/0M1VXrbVp4ul8dvg0tevwm4fhmV//9CepXX/03p3U\n3BvXRuGZw4P91K55otas38+9Tm/ceS011x/Gj/Hhl7n2urXhVngmGy7LlmukTLWBvsRKucUrjFtf\n9ABQmKAHgMIEPQAUJugBoDBBDwCFCXoAKEzQA0Bhgh4AChP0AFCYoAeAwgQ9ABQm6AGgMEEPAIWV\nba9ri1xjWKatrZdsa2uJRrn54jS3K3mp+91meGaZbMobtpPwzLPP/jq1a5poa2uttf5yEZ45HsRb\n11prrbe1Fp65uLxI7Zo9jrfe/eMffTe16/ZWPzU37MWrJSeX56ldx8fx52xj72pq1523cudxcnkY\nnrm8zLU2bmxcC88slrl3Tq+Xuz96iftjNsm9TyeX8XfV6saV1K4XwRc9ABQm6AGgMEEPAIUJegAo\nTNADQGGCHgAKE/QAUJigB4DCBD0AFCboAaAwQQ8AhQl6ACisbKlNL9szk9oVLzpprbWui//POj76\nNrVrdXWYmtu48nZ4ZtlypRTTb/8mPPP4r/5zatfoYpybG8aLZqbLXMHSciV+f3RdbtdOogTqypXc\n62N1kHw4u5XwyHayaOboJF52cvuNt1K7dm/dTM19/OHPwjPzae6+v3s//tu6fu6ds1wm74/lNDzy\n9TcfpVY9ffppeObK9bupXe377+Xm/j++6AGgMEEPAIUJegAoTNADQGGCHgAKE/QAUJigB4DCBD0A\nFCboAaAwQQ8AhQl6AChM0ANAYYIeAAqr216Xnou3ePVarr2u15uFZ54/e5jaNR+f5eZuxJvodtY3\nUrs++x//NTzzzW9+mdq1ub2Vmttd2w3PrCTb/JaporFce11bxu/hbGtjfzN37rvV+Ovq1u3bqV0n\nx8fhmdFr91K7lv3c2+rRN9+EZybjeWrXxkb8mg36uXtxOok3B7bW2rf7n4RnPvr4z1O7nh3EmzZv\nnLyW2tXav0jO/S1f9ABQmKAHgMIEPQAUJugBoDBBDwCFCXoAKEzQA0Bhgh4AChP0AFCYoAeAwgQ9\nABQm6AGgsLqlNomSjtZa63rxgonESGuttfn8PDzz4ItPU7u+/ug3qbmtjfi+a+u522r52S/CM2fP\nc2U9R5e5co/JZnymnyy1WSzjx7iYx4uSWmutS/zl395OnIzW2qx/mZrrT+PP9Fby4RyuDsMzgy5X\n4jJIVnDdvPN2eObxg9yu1X78fFycPU7t2n+Ue1f9zYO/DM+cnHyW2jUcTMMzT57mfteL4IseAAoT\n9ABQmKAHgMIEPQAUJugBoDBBDwCFCXoAKEzQA0Bhgh4AChP0AFCYoAeAwgQ9ABQm6AGgsLLtdctF\n7j/MZHYRnhms5NrJnifanb76/PPUrk8/+DA1d+vaaXjmbCXXoHZrfBSeWV3ZSu26HOeaxp6dx49x\n0c81hvUTlXKzae7cr6wmXgWDldSu/jDXLDk5iZ/74+fPU7suZvFjPHiQa0K7+vjr1NwPf/QPwjNH\nd+6mdl3ZiT9nn3+Ze+d88eX/Ss09Pfk4PHNxeZjadXXnanhm//BRateL4IseAAoT9ABQmKAHgMIE\nPQAUJugBoDBBDwCFCXoAKEzQA0Bhgh4AChP0AFCYoAeAwgQ9ABRWttSm63KlJU+ffRmeWd8Ypnad\nn8cLN87ODlK7VjZyxSqz/mV4ZmtnN7VrMo6XPmT/qR6djFNzl5N5eGbRcvfisEs8nov48bXW2rWr\n8V2T8SS1azGapuZOnh+HZ84nyWPsx8/H6Tz3jO0//jQ1d/Pu/fDM7u6N1K75LF6WdHT0bWpX5h3c\nWmuXXbyQbHKZew+cPH8SnlnOc7teBF/0AFCYoAeAwgQ9ABQm6AGgMEEPAIUJegAoTNADQGGCHgAK\nE/QAUJigB4DCBD0AFCboAaAwQQ8AhZVtr/vqwS9Tcx/95i/CM9vbV1K79nb3wjNbm7mGrBvv30nN\nra5txodO4i1SrbV29DDe7jSa527h/aPT1NxZYl+/5doNe8t4c2C/5RqyRtv98Mz1wWpq1+U02Rw4\njzeoPTs+Se0a91bCM1fv3EvtOjraT839n1/+eXjmO1dfT+3a3d0Jzwxyt307n+aezVkv0Sw5zx3k\ndJpppHx139W+6AGgMEEPAIUJegAoTNADQGGCHgAKE/QAUJigB4DCBD0AFCboAaAwQQ8AhQl6AChM\n0ANAYYIeAAor21736w/+MjX3+Vf/Oz40W0/tunn9RnhmdSXX/LV1Jd7G1Vpr83YUnpklWsZaa23c\nxZv5ZpeZFqnW1m9dTc09PzgPz0zO4q1arbU2bPHzMZ3n/rs/P4lfs8WNXPPXk+PcPXx4Gj/G/eeT\n1K6LlUV45vpO7j0wn8SfsdZaOz6M/7be5Di16/Ag/tsOzw5Su8a58ss2W8avWbfM3cPjxDtunni/\nvSi+6AGgMEEPAIUJegAoTNADQGGCHgAKE/QAUJigB4DCBD0AFCboAaAwQQ8AhQl6AChM0ANAYWVL\nbebT09Tc+rAfnjk+Pkvtevb4QXjm1v1kOU0v1xTR7+LnY9rlSlzOEiUux+e56/zGj7+Xmlt+G7/W\nX/zqi9SuSeI0ro9WU7ueX8ZLOo7O4iUirbXWX99KzX34Vfx5meT6ldruG/Fj7LZypSV7m/FnrLXW\nRqP4XH+Uew88e/JteKbr1lK77l2/l5o7OI0f4+U09+7ud6PwzPHZZWrXi+CLHgAKE/QAUJigB4DC\nBD0AFCboAaAwQQ8AhQl6AChM0ANAYYIeAAoT9ABQmKAHgMIEPQAUJugBoLCy7XW9dp6a29vZDs/s\nruX+L52Mn4dnVka5SzZvuUa5vc0b4Zn+ONcod3D2MDyzfvtKatfq9dw127iMt1ad9XLXbLQbn3v3\n77+T2jWYx1u8Dj97ktr19ttvpeZWH+6HZw4exWdaa+3dN6+FZ+6/dT21a3g8Ts0NZvG2vNEw/n5r\nrbWTRMFevz9J7bpxJ3eMs4fx9rqD02VqV0s0bS4XuXbDF8EXPQAUJugBoDBBDwCFCXoAKEzQA0Bh\ngh4AChP0AFCYoAeAwgQ9ABQm6AGgMEEPAIUJegAorGypzdZmrqxgY3U3PDMZ58ob1sbxgpRFlyun\nmc8XqbmdrXjBxHYvfg5ba226/CQ8s3t7M7VrtJ5o6WitPX1yHJ5ZDHOP2fv/6M3wzJ131lO72ln8\nGB9+lSuMOTl4mpq7nM7CM+tXVlO7du7E57rBNLVruDZMzW2uxu/97a2N1K7lIl4edXQWL+1qrbU2\njF/n1lpb31gLzxydnqR2TccX4ZnB8tV9V/uiB4DCBD0AFCboAaAwQQ8AhQl6AChM0ANAYYIeAAoT\n9ABQmKAHgMIEPQAUJugBoDBBDwCFCXoAKKxse936KNcktbu5E56ZrsVbk1prbau3FZ55ev4stevw\nONckdfgs3jS22Y+38rXW2pVrK+GZ4TDX5rf/8DA19/WXj8IzP/i9e6ld996MN9GdT3L3x0o/0YR2\ncy+16/mj3DGenpyGZ17/0e3Urlmiie7jjz5K7bqzezc1N000MD65yJ373lr8m/Dad26ldn30fz9N\nzR2dxN9xuzu5Nr/pSvy9s7aqvQ4A+B0Q9ABQmKAHgMIEPQAUJugBoDBBDwCFCXoAKEzQA0Bhgh4A\nChP0AFCYoAeAwgQ9ABQm6AGgsLLtdTtb8Wa41lrr95bhma2r8Zax1lpbG10Nzxx9eJ7adfToi9Tc\n5nw1PNPfmqR23bm/G54ZrMaPr7XWTs/GqbmN7fi+XneZ2rWYLcIzl/Ncm9/6XvxVcCVxvVprbf/x\nk9TcrfvxZsnb715J7bp2I97AOFpJvgeG8dbG1lqb9uLP2fOz3LlfzuL31fEs15j55PDb1NzFZfyZ\nXqzn7uFuEW8O7Abx5/lF8UUPAIUJegAoTNADQGGCHgAKE/QAUJigB4DCBD0AFCboAaAwQQ8AhQl6\nAChM0ANAYYIeAAorW2qT/QczvYiXFZzMZqldF2fH4ZnZRa4gZWd9MzV3/dpeeKY/yN1Wb333Znjm\nxo34TGut/eqDX6TmfvT78WKVhw8ep3Y9+fIiPLO200vtWr8Zf2KGO7lCofMruRKXP3j3Xnimdy9X\n8rO7Ef9tWxsbqV2zea7sZLmIl7hsr6+ldo0ThTHjy7PUruu3ckUzJ2fxwq/5Re55Wczj5WeD/qv7\nrvZFDwCFCXoAKEzQA0Bhgh4AChP0AFCYoAeAwgQ9ABQm6AGgMEEPAIUJegAoTNADQGGCHgAKE/QA\nUFjZ9rrDJ7nmpLPDeLPWosv9X9rdizfRXb+xldp18zu5Zq3WxdudvvpmP7VqMYkf43dffy+1a3w+\nTc21QbwN7d7da6lVp0/ibVx7/fXUrrY/CY88fxRvNGuttb2rufNxuRJ/XqbnyWa41Xh73eQy3jbY\nWmuLZa5hr/Xiz+ZyGm9da62185P4vXhwHG/nbK21bjhMzbVFIs4ucxG4vIi/86/fuJLa9SL4ogeA\nwgQ9ABQm6AGgMEEPAIUJegAoTNADQGGCHgAKE/QAUJigB4DCBD0AFCboAaAwQQ8AhZUttTl4tJYb\n7MWLOvbuxItwWmvtyvV4ccb6aJTadTY+Tc0dn8XLgXqJ4pfWWlvtx/93bow2U7teu/u91Nzj48/C\nM7tbuaKZh8/j53H8KF5O01prz47i98fZUbxUpbXWzkez1Nze/e3wzGiQK3Na7cWfs/4ydz5WEsVR\nrbU2SDwv/ZVcYcxoGC/T6nfx91trrR2d5wrJLi7iRVXT49y9uNnfDc90r/C72hc9ABQm6AGgMEEP\nAIUJegAoTNADQGGCHgAKE/QAUJigB4DCBD0AFCboAaAwQQ8AhQl6AChM0ANAYWXb605Ocy1ee6+d\nh2d6m7kGpPNZvG1pfpFrhJq13DH2R/G2q+/cu5ra1buMtwD+xc/+W2rXaCvXOHj33k545jR5Lz4d\nn4RnNpONYdf2roVnvnr4VWrX/bvxXa21dvv2jfBMN8q94ob9+P3Ra7kWun5ybqWL/7ZeYqa11rY3\n43PXt+PXq7XWTs6OU3Pj88vwzOUk17Q5nsTfp8tF7j3wIviiB4DCBD0AFCboAaAwQQ8AhQl6AChM\n0ANAYYIeAAoT9ABQmKAHgMIEPQAUJugBoDBBDwCFCXoAKKxse923x7lmrfXBWnhmMY63JrXW2vFF\nPzzTdfGZ1lrrDRapuUwZ2mqX2zVcxpddtnjbYGutDbp4K19rrfV78UdmsD1K7Xrj96+HZ7pJrr3u\n5CTe4rXzerzJr7XW3vnDd1Nz82G8/Ws8zbWTbSRaza5s5c7H6kquSbFLfKddXuQa1GaX8We6G+Ra\n+TZa7nlZH8Xn5mvL1K5F4rfNEo13L4ovegAoTNADQGGCHgAKE/QAUJigB4DCBD0AFCboAaAwQQ8A\nhQl6AChM0ANAYYIeAAoT9ABQWNlSm8nKODU3XsT/+yxmudM4ncaPcTrNFcacjaepucFqvChic5Qr\nVlntx3/bcGcvtWs8zJ3H6SQ+tzLMFWdcuxEvMBout1O7zp7F7+Gb38ntWtvIlbiMZ/HzeH6au+9X\nNuL38ObqZmpXv58rqprP4sU7G6u5c79YxM/9dJ4r0Jksc2U408t4udjFOJcT/cR5XBnmzv2L4Ise\nAAoT9ABQmKAHgMIEPQAUJugBoDBBDwCFCXoAKEzQA0Bhgh4AChP0AFCYoAeAwgQ9ABQm6AGgsLLt\ndcNR7j9Mqh1uOUvtGq7EW5qGa/E2udZa29/PtTQ9fXYQH+pybVzLxCXrBsPUro31tdTc3uZGeObO\n1dw1u7YXb1AbreUa1G6+fic801s+Se2aji9Sc20ab2vbW11PrdrdjDfzLRMNb6219vTwWWpuuYzv\nu7Z3K7VrZRh/phezXAvd/CzXODhv8X25DsvWWuLcd4lz+KL4ogeAwgQ9ABQm6AGgMEEPAIUJegAo\nTNADQGGCHgAKE/QAUJigB4DCBD0AFCboAaAwQQ8AhZUttbl9PV7S0Vpro0G8cGOln/u/NOjFKxV6\n/VyJyzv3c+fjYCd+Pg6PcqUlz47PwjMX41xZz9llrohoehIv3Dg6jP+u1lq7f/12eOb739tN7fp6\n/5vwzGgjd523k4VC26P43DDXq9K6Ll6g0/q51+naRry8qLXW5sv4+2PSyxXGrK3G3zvZwqn+ciU1\nN59kKmpy7+6Ds6PwzMnkNLXrRfBFDwCFCXoAKEzQA0Bhgh4AChP0AFCYoAeAwgQ9ABQm6AGgMEEP\nAIUJegAoTNADQGGCHgAKE/QAUFhvuVy+6mMAAH5HfNEDQGGCHgAKE/QAUJigB4DCBD0AFCboAaAw\nQQ8AhQl6AChM0ANAYYIeAAoT9ABQmKAHgMIEPQAUJugBoDBBDwCFCXoAKEzQA0Bhgh4AChP0AFCY\noAeAwgQ9ABQm6AGgMEEPAIUJegAoTNADQGGCHgAKE/QAUJigB4DCBD0AFCboAaAwQQ8AhQl6AChM\n0ANAYYIeAAoT9ABQmKAHgMIEPQAUJugBoDBBDwCFCXoAKEzQA0Bhgh4AChP0AFCYoAeAwgQ9ABQm\n6AGgsP8HbqzmWjpezPAAAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x126a51518>"
+      ]
+     },
+     "metadata": {
+      "image/png": {
+       "height": 250,
+       "width": 253
+      }
+     },
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "%config InlineBackend.figure_format = 'retina'\n",
@@ -93,7 +140,7 @@
     "\n",
     "# Explore the dataset\n",
     "batch_id = 1\n",
-    "sample_id = 5\n",
+    "sample_id = 256\n",
     "helper.display_stats(cifar10_dataset_folder_path, batch_id, sample_id)"
    ]
   },
@@ -108,11 +155,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def normalize(x):\n",
     "    \"\"\"\n",
@@ -121,7 +176,7 @@
     "    : return: Numpy array of normalize data\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    return np.array(x/255.0)\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -144,12 +199,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
+    "from sklearn import preprocessing\n",
+    "\n",
     "def one_hot_encode(x):\n",
     "    \"\"\"\n",
     "    One hot encode a list of sample labels. Return a one-hot encoded vector for each label.\n",
@@ -157,7 +222,10 @@
     "    : return: Numpy array of one-hot encoded labels\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    lb = preprocessing.LabelBinarizer()\n",
+    "    lb.fit(range(10))\n",
+    "    \n",
+    "    return lb.transform(x)\n",
     "\n",
     "\n",
     "\"\"\"\n",
