--- a/image_classification.ipynb
+++ b/image_classification.ipynb
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -326,11 +326,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Image Input Tests Passed.\n",
+      "Label Input Tests Passed.\n",
+      "Keep Prob Tests Passed.\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "\n",
@@ -341,7 +351,8 @@
     "    : return: Tensor for image input.\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    x = tf.placeholder(tf.float32, shape=(None,image_shape[0],image_shape[1],image_shape[2]), name ='x')\n",
+    "    return x\n",
     "\n",
     "\n",
     "def neural_net_label_input(n_classes):\n",
@@ -351,7 +362,8 @@
     "    : return: Tensor for label input.\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    y = tf.placeholder(tf.float32,shape=(None, n_classes), name ='y')\n",
+    "    return y\n",
     "\n",
     "\n",
     "def neural_net_keep_prob_input():\n",
@@ -360,7 +372,8 @@
     "    : return: Tensor for keep probability.\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    keep_prob = tf.placeholder(tf.float32,name='keep_prob')\n",
+    "    return keep_prob\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -395,11 +408,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def conv2d_maxpool(x_tensor, conv_num_outputs, conv_ksize, conv_strides, pool_ksize, pool_strides):\n",
     "    \"\"\"\n",
@@ -413,7 +434,19 @@
     "    : return: A tensor that represents convolution and max pooling of x_tensor\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None \n",
+    "    bias = tf.Variable(tf.zeros(conv_num_outputs))\n",
+    "    strides_conv_var = [1,conv_strides[0],conv_strides[1],1]\n",
+    "    weight = tf.Variable(tf.truncated_normal([conv_ksize[0],conv_ksize[1],x_tensor.get_shape().as_list()[3],\n",
+    "                                             conv_num_outputs],stddev=0.1))\n",
+    "    convolution_layer = tf.nn.conv2d(x_tensor, weight,strides=strides_conv_var, padding = 'SAME')\n",
+    "    convolution_layer = tf.nn.bias_add(convolution_layer, bias)\n",
+    "    convolution_layer = tf.nn.relu(convolution_layer)\n",
+    "    pool_ksize_var = [1,pool_ksize[0],pool_ksize[1],1]\n",
+    "    pool_strides_var = [1,pool_strides[0],pool_strides[1],1]\n",
+    "    convolution_layer = tf.nn.max_pool(convolution_layer,ksize=pool_ksize_var,strides=pool_strides_var,padding='SAME')\n",
+    "    \n",
+    "    \n",
+    "    return convolution_layer\n",
     "\n",
     "\n",
     "\"\"\"\n",
